--- a/3.html
+++ b/3.html
@@ -2,37 +2,42 @@
     <head>
         <title>web</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1><a href="0.html">WEB</a></h1>
-        <ol>
-            <li><a href="1.html">HTML</a></li>
-            <li><a href="2.html">CSS</a></li>
-            <li><a href="3.html">JAVASCRIPT</a></li>
-        </ol>
-        <h2>What is JavaScript?</h2>
-        <p>JavaScript is a text-based programming language used both on the client-side and server-side that allows you to make web pages interactive. Where HTML and CSS are languages that give structure and style to web pages, JavaScript gives web pages interactive elements that engage a user. Common examples of JavaScript that you might use every day include the search box on Amazon, a news recap video embedded on The New York Times, or refreshing your Twitter feed.</p>
-        <p>Incorporating JavaScript improves the user experience of the web page by converting it from a static page into an interactive one. To recap, JavaScript adds behavior to web pages.</p>
-
-        <h2>What is JavaScript used for?</h2>
-        <ol>
-            <li>
-                Adding interactive behavior to web pages
-                <p>JavaScript allows users to interact with web pages. There are almost no limits to the things you can do with JavaScript on a web page</p>
-            </li>
-            <li>
-                Creating web and mobile apps
-                <p>Developers can use various JavaScript frameworks for developing and building web and mobile apps. JavaScript frameworks are collections of JavaScript code libraries that provide developers with pre-written code to use for routine programming features and tasks—literally a framework to build websites or web applications around.</p>
-                <p>Popular JavaScript front-end frameworks include React, React Native, Angular, and Vue. Many companies use Node.js, a JavaScript runtime environment built on Google Chrome’s JavaScript V8 engine. A few famous examples include Paypal, LinkedIn, Netflix, and Uber!</p>
-            </li>
-            <li>
-                Building web servers and developing server applications
-                <p>Beyond websites and apps, developers can also use JavaScript to build simple web servers and develop the back-end infrastructure using Node.js. </p>
-            </li>
-            <li>
-                Game development
-                <p>Of course, you can also use JavaScript to create browser games. These are a great way for beginning developers to practice their JavaScript skills.</p>
-            </li>
-        </ol>
+        <div id="grid">
+            <ol>
+                <li><a href="1.html">HTML</a></li>
+                <li><a href="2.html">CSS</a></li>
+                <li><a href="3.html">JAVASCRIPT</a></li>
+            </ol>
+            <div id="article">
+                <h2>What is JavaScript?</h2>
+                <p>JavaScript is a text-based programming language used both on the client-side and server-side that allows you to make web pages interactive. Where HTML and CSS are languages that give structure and style to web pages, JavaScript gives web pages interactive elements that engage a user. Common examples of JavaScript that you might use every day include the search box on Amazon, a news recap video embedded on The New York Times, or refreshing your Twitter feed.</p>
+                <p>Incorporating JavaScript improves the user experience of the web page by converting it from a static page into an interactive one. To recap, JavaScript adds behavior to web pages.</p>
+        
+                <h2>What is JavaScript used for?</h2>
+                <ol>
+                    <li>
+                        Adding interactive behavior to web pages
+                        <p>JavaScript allows users to interact with web pages. There are almost no limits to the things you can do with JavaScript on a web page</p>
+                    </li>
+                    <li>
+                        Creating web and mobile apps
+                        <p>Developers can use various JavaScript frameworks for developing and building web and mobile apps. JavaScript frameworks are collections of JavaScript code libraries that provide developers with pre-written code to use for routine programming features and tasks—literally a framework to build websites or web applications around.</p>
+                        <p>Popular JavaScript front-end frameworks include React, React Native, Angular, and Vue. Many companies use Node.js, a JavaScript runtime environment built on Google Chrome’s JavaScript V8 engine. A few famous examples include Paypal, LinkedIn, Netflix, and Uber!</p>
+                    </li>
+                    <li>
+                        Building web servers and developing server applications
+                        <p>Beyond websites and apps, developers can also use JavaScript to build simple web servers and develop the back-end infrastructure using Node.js. </p>
+                    </li>
+                    <li>
+                        Game development
+                        <p>Of course, you can also use JavaScript to create browser games. These are a great way for beginning developers to practice their JavaScript skills.</p>
+                    </li>
+                </ol>
+            </div>
+        </div>
     </body>
 </html>
