--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     </head>
     <body>
         <h1><a href="0.html">WEB</a></h1>
-        <input type="button" id="day_night" value="night" onclick="
-            if(document.querySelector('#day_night').value === 'night'){
-                document.querySelector('body').style.backgroundColor='black';
-                document.querySelector('body').style.color='white'
-                document.querySelector('#day_night').value = 'day'}
+        <input type="button" value="night" onclick="
+            var target = document.querySelector('body').style
+            if(this.value === 'night'){
+                target.backgroundColor='black';
+                target.color='white'
+                this.value = 'day'}
             else{
-                document.querySelector('body').style.backgroundColor='white';
-                document.querySelector('body').style.color='black'
-                document.querySelector('#day_night').value = 'night'
+                target.backgroundColor='white';
+                target.color='black'
+                this.value = 'night'
             }">
         <div id="grid">
             <ol>
