--- a/index.html
+++ b/index.html
@@ -3,20 +3,41 @@
         <title>web</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <script>
+            function setBgColor(color){
+                document.querySelector('body').style.backgroundColor = color;
+            }
+            function setFontColor(color){
+                document.querySelector('body').style.color = color;
+            }
+            function setLinkColor(color){
+                var alist = document.querySelectorAll('a');
+                    var i = 0;
+                    while(i<alist.length){
+                        alist[i].style.color = color;
+                        i = i+1;
+                    }
+            }
+            function nightDayHandler(self){
+                var target = document.querySelector('body');
+                if(self.value === 'night'){
+                    setBgColor('black');
+                    setFontColor('white');
+                    setLinkColor('powderblue');
+                    self.value = 'day';
+                }
+                else{
+                    setBgColor('white');
+                    setFontColor('black');
+                    setLinkColor('blue');
+                    self.value = 'night';
+                }
+            }
+        </script>
     </head>
     <body>
         <h1><a href="0.html">WEB</a></h1>
-        <input type="button" value="night" onclick="
-            var target = document.querySelector('body').style
-            if(this.value === 'night'){
-                target.backgroundColor='black';
-                target.color='white'
-                this.value = 'day'}
-            else{
-                target.backgroundColor='white';
-                target.color='black'
-                this.value = 'night'
-            }">
+        <input type="button" value="night" onclick="nightDayHandler(this)">
         <div id="grid">
             <ol>
                 <li><a href="1.html">HTML</a></li>
