--- a/3.html
+++ b/3.html
@@ -3,9 +3,11 @@
         <title>web</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <script src="colors.js"></script>
     </head>
     <body>
         <h1><a href="0.html">WEB</a></h1>
+        <input type="button" value="night" onclick="nightDayHandler(this)">
         <div id="grid">
             <ol>
                 <li><a href="1.html">HTML</a></li>
